# demo-heimdex-v3

./: .env.example  .env.production.example  .gitattributes  .gitignore  ACTOR_ARCHITECTURE.md  ADMIN_METRICS_PHASE1_SUMMARY.md  ADMIN_METRICS_PHASE2_README.md  ADVANCED_SEARCH_WEIGHTS_README.md  BUGFIX_CLIP_QUICKGELU.md  BUGFIX_DELETE_PERSON.md  BUGFIX_EMBEDDING_DESERIALIZATION.md  BUGFIX_PEOPLE_FRONTEND.md  BUGFIX_PERSON_QUERY_EMBEDDING.md  BUGFIX_PHOTO_DOWNLOAD.md  BUGFIX_PHOTO_UPLOAD.md  BUGFIX_WORKER_IMPORTS.md  CLIP_IMPLEMENTATION_SUMMARY.md  CLIP_RUNPOD_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEVLOG.txt  DISPLAY_SCORE_IMPLEMENTATION.md  DOCKER_BACKFILL_GUIDE.md  DOCKER_FIX.md  DOCKER_TESTING_GUIDE.md  DOCKER_TESTING_VERIFIED.md  EMBEDDING_SERIALIZATION_INVESTIGATION.md  FRONTEND_GUIDE.md  INTEGRATION_EXAMPLE.md  LICENSE  LOOKUP_SOFT_GATING_IMPLEMENTATION.md  Makefile  PHASE2_DEPLOYMENT_SUMMARY.md  QUICKSTART_SUMMARY_FIX.md  QUICK_WINS_SUMMARY.md  RAILWAY-DEPLOY.md  README.md  REPROCESSING_GUIDE.md  REPROCESSING_HOTFIX.md  REPROCESSING_IMPLEMENTATION.md  (+15 more)
services/api/: ADMIN_METRICS_SETUP.md  Dockerfile  Dockerfile.test  QUICKSTART_ADMIN.md  README_ADMIN.md  pyproject.toml  pytest.ini  railway.json  test_clip_auth.py  verify_admin_config.py
services/worker/: .dockerignore  .env.example  CLIP_BACKFILL_GUIDE.md  CLIP_VISUAL_EMBEDDINGS.md  Dockerfile  Dockerfile.test  SCENE_DETECTION.md  TRANSCRIPT_TIMESTAMP_ALIGNMENT.md  VISUAL_SEMANTICS_OPTIMIZATION.md  pyproject.toml  railway.json  test_metadata.py  test_sidecar_builder.py  (+1 more)
(+298 files in other folders)
