[project]
name = "heimdex-worker"
version = "0.1.0"
description = "Heimdex background worker service"
requires-python = ">=3.11"
dependencies = [
    "dramatiq[redis]>=1.15.0",
    "redis>=5.0.0",
    "psycopg[binary]>=3.1.0",
    "supabase>=2.3.0",
    "openai>=1.10.0",
    "scenedetect[opencv]>=0.6.2",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
